--- a/home.html
+++ b/home.html
@@ -3,6 +3,6 @@
 	</head>
 	<body>
 	<h1> informática </h1>
-	<img src="imagesDecao.jfif">
+	<img src="imagesDecao.jfif">file:///C:/Users/CEEP-09/Desktop/Nova%20pasta/imagesDecao.jfif
 	</body>
 	<html/>
